[gd_scene load_steps=50 format=3 uid="uid://drdl787fa04qg"]

[ext_resource type="Texture2D" uid="uid://dau7fkv3e2y4y" path="res://Arts/locker_room/locker_room_bg.png" id="1_1akbl"]
[ext_resource type="Script" path="res://Scripts/locker_room.gd" id="1_7v2be"]
[ext_resource type="Texture2D" uid="uid://dcqme125buf42" path="res://Arts/narrative_rooms/twilight_room1.png" id="2_4a0oa"]
[ext_resource type="Texture2D" uid="uid://cdlltyvv1dv4o" path="res://Arts/narrative_rooms/twilight_room2.png" id="3_nois4"]
[ext_resource type="Texture2D" uid="uid://benrbsyqphfct" path="res://Arts/narrative_rooms/twilight_room3.png" id="4_eahms"]
[ext_resource type="Texture2D" uid="uid://46n58yh78y5o" path="res://Arts/narrative_rooms/final_room_locked1.png" id="5_hs4nq"]
[ext_resource type="Texture2D" uid="uid://c4pav5sst7gyx" path="res://Arts/narrative_rooms/final_room_locked2.png" id="6_wu7ir"]
[ext_resource type="Texture2D" uid="uid://5jkf2jiklyhn" path="res://Arts/narrative_rooms/final_room_locked3.png" id="7_8ffj1"]
[ext_resource type="Texture2D" uid="uid://plbvauo801ra" path="res://Arts/narrative_rooms/final_room_locked4.png" id="8_bgxok"]
[ext_resource type="Texture2D" uid="uid://de3fp5pvo8c1n" path="res://Arts/narrative_rooms/narrative_a1.png" id="9_enf25"]
[ext_resource type="Texture2D" uid="uid://clmbis30uv1ct" path="res://Arts/narrative_rooms/cloud_a.png" id="9_iobjq"]
[ext_resource type="Texture2D" uid="uid://8ebpmiphehxo" path="res://Arts/narrative_rooms/cloud_b.png" id="10_mkmpt"]
[ext_resource type="Texture2D" uid="uid://cltkuv1hcwigu" path="res://Arts/narrative_rooms/narrative_a2.png" id="10_ty8ua"]
[ext_resource type="Texture2D" uid="uid://bdk50b146llh5" path="res://Arts/narrative_rooms/narrative_a3.png" id="11_k1dvm"]
[ext_resource type="Texture2D" uid="uid://c24xojp7cf2l3" path="res://Arts/narrative_rooms/cloud_d.png" id="11_s5fe7"]
[ext_resource type="Texture2D" uid="uid://pbenk8mmwwi7" path="res://Arts/narrative_rooms/narrative_b1.png" id="12_tetxk"]
[ext_resource type="Texture2D" uid="uid://cro5ih23x5dc2" path="res://Arts/narrative_rooms/narrative_b2.png" id="13_vmj7c"]
[ext_resource type="Texture2D" uid="uid://chrsem08mptsj" path="res://Arts/narrative_rooms/narrative_b3.png" id="14_4ax8u"]
[ext_resource type="PackedScene" uid="uid://do3hoaamcl58p" path="res://Scenes/Token.tscn" id="15_fhmoc"]
[ext_resource type="Texture2D" uid="uid://dkrgf2f4msvhg" path="res://Arts/directions/direction_sign_b1.png" id="16_o5wq7"]
[ext_resource type="Texture2D" uid="uid://das1wjq18aly6" path="res://Arts/directions/direction_sign_b2.png" id="17_fp1q4"]
[ext_resource type="Script" path="res://Scripts/navigation_narrative.gd" id="18_8ubbl"]
[ext_resource type="Texture2D" uid="uid://dirthex3am383" path="res://Arts/directions/direction_sign_b9.png" id="19_3l0p3"]
[ext_resource type="Texture2D" uid="uid://dxkh2y7ic647x" path="res://Arts/directions/direction_sign_b10.png" id="20_h8svm"]
[ext_resource type="Texture2D" uid="uid://cpo2qmt8ou3u" path="res://Arts/narrative_rooms/narrative_c1.png" id="21_0b3xv"]
[ext_resource type="Texture2D" uid="uid://ba267myrk6dtu" path="res://Arts/narrative_rooms/narrative_c_text1.png" id="22_y6qo8"]
[ext_resource type="Texture2D" uid="uid://g4fp6qf8frsq" path="res://Arts/narrative_rooms/narrative_c_text2.png" id="23_rn6id"]
[ext_resource type="Script" path="res://Scripts/painting_decor.gd" id="24_m52mo"]
[ext_resource type="Texture2D" uid="uid://ri2dr67mcs4h" path="res://Arts/narrative_rooms/twilight_buttons1.png" id="25_l7qui"]
[ext_resource type="Texture2D" uid="uid://dgo2o48itooq2" path="res://Arts/narrative_rooms/twilight_buttons2.png" id="26_i55xc"]
[ext_resource type="Texture2D" uid="uid://ds2igegiee3ul" path="res://Arts/narrative_rooms/twilight_buttons3.png" id="27_eeh8n"]
[ext_resource type="Texture2D" uid="uid://cwvrl8l7vwqkj" path="res://Arts/narrative_rooms/twilight_buttons4.png" id="28_h71v3"]
[ext_resource type="Texture2D" uid="uid://cntxvf7cqxvlh" path="res://Arts/narrative_rooms/final_room_lock_icon1.png" id="29_n1k2y"]
[ext_resource type="Texture2D" uid="uid://ck8stysqcmg03" path="res://Arts/narrative_rooms/final_room_lock_icon2.png" id="30_gmywl"]
[ext_resource type="Texture2D" uid="uid://btdj46j368265" path="res://Arts/narrative_rooms/final_room_lock_icon3.png" id="31_0elt7"]
[ext_resource type="Texture2D" uid="uid://d3wp7y6n3gf6g" path="res://Arts/narrative_rooms/final_room_lock_icon4.png" id="32_hcajg"]
[ext_resource type="Texture2D" uid="uid://ci44c31yypex2" path="res://Arts/directions/direction_sign_b7.png" id="33_12efi"]
[ext_resource type="Texture2D" uid="uid://2vmcuax3y7uj" path="res://Arts/directions/direction_sign_b6.png" id="34_twsbi"]
[ext_resource type="Texture2D" uid="uid://ciuxlh1pt7c3r" path="res://Arts/directions/direction_sign_b3.png" id="35_76eed"]
[ext_resource type="Script" path="res://Scripts/navigation.gd" id="36_2jtto"]

[sub_resource type="Animation" id="Animation_x3kos"]
resource_name = "new_animation"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.13333, 5, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(759, 65), Vector2(1035, 65), Vector2(-50, 65), Vector2(759, 65)]
}

[sub_resource type="Animation" id="Animation_uftf0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(759, 65)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3y2aj"]
_data = {
"RESET": SubResource("Animation_uftf0"),
"new_animation": SubResource("Animation_x3kos")
}

[sub_resource type="Animation" id="Animation_ertpi"]
resource_name = "new_animation"
length = 9.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.16667, 6.36667, 9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(511, 182), Vector2(1150, 182), Vector2(-100, 182), Vector2(511, 182)]
}

[sub_resource type="Animation" id="Animation_4nwv3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(511, 182)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxvso"]
_data = {
"RESET": SubResource("Animation_4nwv3"),
"new_animation": SubResource("Animation_ertpi")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_6vkea"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4a0oa")
}, {
"duration": 1.0,
"texture": ExtResource("3_nois4")
}, {
"duration": 1.0,
"texture": ExtResource("4_eahms")
}],
"loop": true,
"name": &"button_room",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_hs4nq")
}, {
"duration": 1.0,
"texture": ExtResource("6_wu7ir")
}, {
"duration": 1.0,
"texture": ExtResource("7_8ffj1")
}, {
"duration": 1.0,
"texture": ExtResource("6_wu7ir")
}, {
"duration": 1.0,
"texture": ExtResource("8_bgxok")
}, {
"duration": 1.0,
"texture": ExtResource("5_hs4nq")
}, {
"duration": 1.0,
"texture": ExtResource("6_wu7ir")
}, {
"duration": 1.0,
"texture": ExtResource("7_8ffj1")
}, {
"duration": 1.0,
"texture": ExtResource("6_wu7ir")
}, {
"duration": 1.0,
"texture": ExtResource("8_bgxok")
}],
"loop": false,
"name": &"final_room_locked",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_enf25")
}, {
"duration": 1.0,
"texture": ExtResource("10_ty8ua")
}, {
"duration": 1.0,
"texture": ExtResource("11_k1dvm")
}, {
"duration": 1.0,
"texture": ExtResource("10_ty8ua")
}],
"loop": true,
"name": &"rm1",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_tetxk")
}, {
"duration": 1.0,
"texture": ExtResource("13_vmj7c")
}, {
"duration": 1.0,
"texture": ExtResource("14_4ax8u")
}],
"loop": true,
"name": &"rm2",
"speed": 2.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_wtyn3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_y6qo8")
}, {
"duration": 1.0,
"texture": ExtResource("23_rn6id")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_j4wog"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_n1k2y")
}, {
"duration": 1.0,
"texture": ExtResource("30_gmywl")
}, {
"duration": 1.0,
"texture": ExtResource("31_0elt7")
}, {
"duration": 1.0,
"texture": ExtResource("32_hcajg")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="LockerRoom" type="Node2D"]
script = ExtResource("1_7v2be")

[node name="BG" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2, 2)
texture = ExtResource("1_1akbl")

[node name="Nav" type="TextureButton" parent="."]
offset_left = 25.0
offset_top = 474.0
offset_right = 70.0
offset_bottom = 498.0
scale = Vector2(2, 2)
texture_normal = ExtResource("35_76eed")
texture_hover = ExtResource("17_fp1q4")
script = ExtResource("36_2jtto")
destination = "arcade_room"

[node name="Doors" type="Node2D" parent="."]

[node name="Room1" type="Node2D" parent="."]

[node name="BG" type="ColorRect" parent="Room1"]
offset_right = 960.0
offset_bottom = 540.0
color = Color(0.45098, 0.745098, 0.827451, 1)

[node name="Token" parent="Room1" instance=ExtResource("15_fhmoc")]
position = Vector2(679, 248)
scale = Vector2(4, 4)

[node name="NavBack" type="TextureButton" parent="Room1"]
offset_left = 23.0
offset_top = 469.0
offset_right = 62.0
offset_bottom = 493.0
scale = Vector2(2, 2)
texture_normal = ExtResource("16_o5wq7")
texture_hover = ExtResource("17_fp1q4")
script = ExtResource("18_8ubbl")

[node name="Cloud1" type="Sprite2D" parent="Room1"]
position = Vector2(759, 65)
scale = Vector2(2, 2)
texture = ExtResource("9_iobjq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Room1/Cloud1"]
libraries = {
"": SubResource("AnimationLibrary_3y2aj")
}
autoplay = "new_animation"
speed_scale = 0.5

[node name="Cloud2" type="Sprite2D" parent="Room1"]
position = Vector2(511, 182)
scale = Vector2(2, 2)
texture = ExtResource("10_mkmpt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Room1/Cloud2"]
libraries = {
"": SubResource("AnimationLibrary_rxvso")
}
autoplay = "new_animation"
speed_scale = 0.5

[node name="Cloud3" type="Sprite2D" parent="Room1"]
position = Vector2(858, 292)
scale = Vector2(4, 4)
texture = ExtResource("11_s5fe7")

[node name="Cloud4" type="Sprite2D" parent="Room1"]
position = Vector2(275, 452)
scale = Vector2(2, 2)
texture = ExtResource("10_mkmpt")

[node name="Room2" type="Node2D" parent="."]
position = Vector2(52, 590)
metadata/_edit_group_ = true

[node name="Background" type="AnimatedSprite2D" parent="Room2"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6vkea")
animation = &"rm2"
autoplay = "rm2"
centered = false

[node name="Token" parent="Room2" instance=ExtResource("15_fhmoc")]
position = Vector2(484, 479)
scale = Vector2(2, 2)

[node name="NavBack" type="TextureButton" parent="Room2"]
offset_left = 23.0
offset_top = 469.0
offset_right = 62.0
offset_bottom = 493.0
scale = Vector2(2, 2)
texture_normal = ExtResource("19_3l0p3")
texture_hover = ExtResource("20_h8svm")
script = ExtResource("18_8ubbl")

[node name="Room3" type="Node2D" parent="."]
position = Vector2(840, 702)
metadata/_edit_group_ = true

[node name="BG" type="TextureRect" parent="Room3"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2, 2)
texture = ExtResource("21_0b3xv")

[node name="Text" type="AnimatedSprite2D" parent="Room3"]
position = Vector2(453, 277)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_wtyn3")
script = ExtResource("24_m52mo")
metadata/_edit_group_ = true

[node name="ClickDetect" type="Control" parent="Room3/Text"]
layout_mode = 3
anchors_preset = 0
offset_left = -36.0
offset_top = -46.0
offset_right = 37.0
offset_bottom = 46.0

[node name="NavBack" type="TextureButton" parent="Room3"]
offset_left = 23.0
offset_top = 469.0
offset_right = 62.0
offset_bottom = 493.0
scale = Vector2(2, 2)
texture_normal = ExtResource("19_3l0p3")
texture_hover = ExtResource("20_h8svm")
script = ExtResource("18_8ubbl")

[node name="ButtonRoom" type="Node2D" parent="."]
position = Vector2(1322, 391)
metadata/_edit_group_ = true

[node name="Background" type="AnimatedSprite2D" parent="ButtonRoom"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6vkea")
animation = &"button_room"
autoplay = "button_room"
centered = false

[node name="NavStay" type="TextureButton" parent="ButtonRoom"]
offset_left = 180.0
offset_top = 279.0
offset_right = 291.0
offset_bottom = 329.0
scale = Vector2(2, 2)
texture_normal = ExtResource("25_l7qui")
texture_hover = ExtResource("26_i55xc")

[node name="NavWake" type="TextureButton" parent="ButtonRoom"]
offset_left = 550.0
offset_top = 279.0
offset_right = 661.0
offset_bottom = 329.0
scale = Vector2(2, 2)
texture_normal = ExtResource("27_eeh8n")
texture_hover = ExtResource("28_h71v3")

[node name="FinalRoom" type="Node2D" parent="."]
position = Vector2(1826, 44)
metadata/_edit_group_ = true

[node name="Background" type="AnimatedSprite2D" parent="FinalRoom"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6vkea")
animation = &"final_room_locked"
centered = false

[node name="LockIcon" type="AnimatedSprite2D" parent="FinalRoom"]
position = Vector2(313, 192)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_j4wog")
autoplay = "default"
centered = false

[node name="ClickDetect" type="Control" parent="FinalRoom/LockIcon"]
layout_mode = 3
anchors_preset = 0
offset_left = -19.0
offset_top = -7.0
offset_right = 187.0
offset_bottom = 86.0

[node name="NavBack" type="TextureButton" parent="FinalRoom"]
offset_left = 23.0
offset_top = 469.0
offset_right = 62.0
offset_bottom = 493.0
scale = Vector2(2, 2)
texture_normal = ExtResource("33_12efi")
texture_hover = ExtResource("34_twsbi")
script = ExtResource("18_8ubbl")
